--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "@mui/material": "^5.14.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.3.0"
+    "react-redux": "^8.1.2",
+    "react-router-dom": "^6.3.0",
+    "redux": "^4.2.1",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
